--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ body {
     background: linear-gradient(0deg, rgb(22, 1, 75) 0%, rgb(42, 14, 108) 100%);
     border-radius: 1000px 1000px 20px 20px;
     border: 1px solid rgba(20,0,70,1);
-    width: 30%;
+    width: 500px;
     height: 700px;
     margin: 0 auto;
     display: flex;
